Fix the project title so it aligns with the image.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -4,6 +4,10 @@
   font-size: 16px;
 }
 
+.projectTitle {
+  font-size: 460%;
+}
+
 
 .roundedImage {
     border-radius: 50%;
